# treco

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPROVEMENT_PLAN.md  LICENSE  Makefile  PLAN.md  PRODUCT.md  README.md  install.sh  render.yaml
.github/workflows/: ci.yml
backend/: .env.example  requirements.txt
backend/app/: main.py
backend/app/api/: router.py
backend/app/core/: config.py  constants.py  database.py
backend/app/models/: __init__.py  agent.py  event.py  ticket.py  user.py  user_workspace.py  workspace.py
backend/app/services/: agent_runner.py  auth.py  deviation_detector.py
backend/app/worker/: main.py  runner.py
backend/migrations/: env.py
backend/migrations/versions/: 2d54e54c9557_agent_repo_path_pid.py  933bfa2574e2_initial_schema.py  a1c3e9f02b7d_workspaces.py
backend/scripts/: seed_demo.py
backend/sdk/python/: pyproject.toml
backend/sdk/python/tests/: test_cli_init.py  test_cli_logs.py  test_client.py  test_hooks.py  test_server.py
backend/sdk/python/treco/: __init__.py  cli.py  client.py  server.py
backend/tests/: conftest.py  shared.py  test_agent_runner.py  test_agents.py  test_auth.py  test_auth_oauth.py  test_criteria_extractor_full.py  test_deviation_detector.py  test_events.py  test_fs.py  test_health.py  test_init.py  test_linear_adapter.py  test_logging_config.py  test_new_endpoints.py  test_tickets.py  test_user_workspace.py  test_workspaces.py
docs/: claude-code-integration.md  cli-reference.md  concepts.md  contributing.md  deployment.md  faq.md  sdk-python.md  security.md  self-hosting.md
docs/integrations/: asana.md  github.md  jira.md  linear.md
frontend/: .env.local  Dockerfile  jest.config.js  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/__tests__/: cost.test.ts  utils.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(app)/: layout.tsx
frontend/app/agents/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/tickets/: page.tsx
frontend/components/agents/: AgentCard.tsx  AgentColumn.tsx  RegisterAgentModal.tsx
frontend/components/dashboard/: AgentMiniCard.tsx  AgentStatusGrid.tsx  DashboardBurndown.tsx  EventFeed.tsx  OnboardingCard.tsx  StatBar.tsx
frontend/components/layout/: AppShell.tsx  FolderBrowser.tsx  NewWorkspaceModal.tsx  Sidebar.tsx  TopBar.tsx  WorkspaceTabs.tsx
frontend/components/ticket-detail/: AssignAgentPanel.tsx  CostPanel.tsx  CriteriaChecklist.tsx  CriterionItem.tsx  (+2 more)
frontend/hooks/: useKeyboardShortcuts.ts
frontend/lib/: StreamProvider.tsx  api.ts  auth.ts  cost.ts  hooks.ts  theme.tsx  types.ts  useKeyboardShortcuts.ts  utils.ts  workspace.tsx
(+39 files in other folders)
