[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "treco"
version = "0.1.0"
description = "Agent SDK for Treco — report ticket progress, token consumption, and acceptance criteria from any agent"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["httpx>=0.27.0"]

[project.scripts]
treco = "treco.cli:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "respx"]
