[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "treco"
version = "0.1.1"
description = "Agent observability — track AI agents working on tickets in real time"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["ai", "agents", "observability", "claude", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "pydantic-settings>=2.0.0",
]
dev = ["pytest", "pytest-asyncio", "respx", "httpx"]

[project.scripts]
treco = "treco.cli:main"

[project.urls]
Homepage = "https://github.com/danfranco3/treco"
Repository = "https://github.com/danfranco3/treco"
